# marrtino

./: README.md
marrtino/: CMakeLists.txt  package.xml
marrtino_control/: CMakeLists.txt  package.xml
marrtino_control/config/: control.yaml
marrtino_control/launch/: control.launch
marrtino_description/: CMakeLists.txt  package.xml
marrtino_description/launch/: marrtino_upload.launch  test.launch
marrtino_description/meshes/: basket.stl
marrtino_description/urdf/: marrtino_robot.gazebo  marrtino_robot.xacro  marrtino_robot.xacro~
marrtino_gazebo/: CMakeLists.txt  package.xml
marrtino_gazebo/launch/: marrtino_challenge.launch  marrtino_empty_world.launch  spawn_marrtino.launch
marrtino_navigation/: CMakeLists.txt  package.xml
marrtino_navigation/config/: costmap_common.yaml  costmap_local.yaml  planner.yaml
marrtino_navigation/launch/: amcl.launch  gmapping.launch  map_server.launch  move_base.launch  robot_navigation.launch
marrtino_navigation/maps/: arena.pgm
