<?xml version="1.0"?>
<package>
  <name>marrtino</name>
  <version>0.0.1</version>
  <description>Metapackage for the Marrtino robot software</description>

  <maintainer email="castaman@dei.unipd.it">Nicola Castaman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>marrtino_bringup</run_depend>
  <run_depend>marrtino_base</run_depend>

  <export>
    <metapackage/>
  </export>
</package>

