<?xml version="1.0"?>
<package>
  <name>marrtino_description</name>
  <version>0.0.1</version>
  <description>Marrtino URDF description</description>

  <author email="castaman@dei.unipd.it">Nicola Castaman</author>

  <maintainer email="castaman@dei.unipd.it">Nicola Castaman</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>

